# desktop

./: AGENTS.md  Cargo.toml  DESIGN.md  Taskfile.yml  package-lock.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/: package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/web/: index.css
apps/ui/: index.html  package.json  tsconfig.json  vite.config.ts
apps/ui/src/: App.tsx  index.css
apps/ui/src/pages/: BreadcrumbPage.tsx  CollapsiblePage.tsx
apps/web/server/: Cargo.toml
apps/web/server/src/: app_state.rs  bootstrap.rs  config.rs  error.rs  main.rs  routes.rs
crates/application/: Cargo.toml
crates/application/src/: error.rs  lib.rs
crates/application/src/session/: tests.rs
crates/contracts/src/: frontend.rs  lib.rs  session.rs  task.rs
crates/domain/: Cargo.toml
crates/domain/src/: artifact.rs  error.rs  ids.rs  lib.rs  project.rs  session.rs  task.rs  tests.rs  virtual_entry.rs  virtual_folder.rs  worktree.rs
crates/pty/: Cargo.toml
crates/pty/src/: history.rs  lib.rs  manager.rs  process.rs  types.rs
docs/: application-contracts.md  schema.sql  web-server-runtime.md
drafts/: table-handler-audit.md
openspec/changes/implement-domain-models-from-schema/: design.md  proposal.md  tasks.md
openspec/specs/app-contracts/: spec.md
openspec/specs/application-handlers/: spec.md
openspec/specs/task-terminal-runtime/: spec.md
openspec/specs/task-worktree-provisioning/: spec.md
openspec/specs/web-server-runtime/: spec.md
xtask/src/: export_contracts.rs
(+37 files in other folders)
